flux/infrastructure/media/nzbget/service.yaml
# Auto-split from cluster files
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  namespace: media
spec:
  selector:
    app: nzbget
  ports:
  - name: http
    port: 6789
    targetPort: 6789
    protocol: TCP
  type: ClusterIP
